[tool.poetry]
name = "cpl-python3"
version = "0.1.0"
description = "Competetive programming library for Python3"
authors = ["yaumu3 <yumu@me.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
numpy = "1.18.2"
scipy = "1.4.1"

[tool.poetry.dev-dependencies]
online-judge-verify-helper = "^4.12.1"
pre-commit = "^2.7.1"
flake8 = "^3.8.3"
black = "^20.8b1"
isort = {extras = ["pyproject"], version = "^5.5.1"}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

