[tool.poetry]
authors = ["yaumu3 <yumu@me.com>"]
description = "Competetive programming library for Python3"
name = "cpl-python3"
packages = [
  {include = "cpl"},
]
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "1.18.2"
python = "3.8.2"
scipy = "1.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = {extras = ["pyproject"], version = "^5.5.1"}
online-judge-verify-helper = "^4.12.1"
pre-commit = "^2.7.1"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
